Ensure unsocial buttons are visible

--- a/app/assets/stylesheets/core/core_components/_social.sass
+++ b/app/assets/stylesheets/core/core_components/_social.sass
@@ -33,7 +33,7 @@
   box-sizing: border-box
   padding: 5px
   margin-left: 5px
-  border: 1px solid $subduedgray
+  border: 1px solid $lightgray
   border-radius: 20px
 
   .tooltip
@@ -106,6 +106,6 @@
 
 .social__item--twitter
   background-color: $twitter
-  
+
 .social__item--tumblr
   background-color: $tumblr
